# NeuraNews

./: .env  .env.example  FRONTEND_ENHANCEMENTS.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run_all.py  test_db_connection.py
backend/: admin_auth_simple.py  admin_routes.py  auth_service.py  config.py  create_tables.py  database.py  gdelt_client.py  ingest_gdelt.py  keyword_extractor.py  main.py  models.py  ner_analyzer.py  news_service.py  sentement_analyzer.py  text_cleaning.py  topic_modeling.py  trend_analyzer.py
frontend/: app.py
streamlit-frontend/: admin_app.py  app.py  demo_components.py  geo_map.py  time_series.py  trend_insights.py  ui_components.py
tools/: geocode_backfill.py
